# AABB-Implementation

./: CMakeLists.txt  README.md  main.cpp
.cache/clangd/index/: Box.cpp.5E7777F43883B51F.idx  Box.hpp.41227B720CB9EDEE.idx  BoxManager.cpp.D23BB6B0C94570F5.idx  BoxManager.hpp.B400182E00660C99.idx  Component.hpp.F4D501688084B417.idx  Game.cpp.3DEB9A63536AEEA5.idx  Game.hpp.68A15B37090BB2B8.idx  Vec2.cpp.38FFE05F681388FF.idx  Vec2.hpp.C84F1C69AF82E9F7.idx  main.cpp.DEB9E0E6438AFD54.idx
Debug/: CMakeCache.txt  Makefile  cmake_install.cmake  compile_commands.json  hello
Debug/.cmake/api/v1/reply/: codemodel-v2-3640cda0da887eac602b.json  codemodel-v2-5c2e0de53ef8d1a24f06.json  index-2025-08-20T11-39-19-0430.json  index-2025-08-20T13-17-16-0375.json  target-hello-Debug-58d915ff635a4c1ea6ba.json  target-hello-eb9e2cf87f0ea1ae4cb2.json
include/: Box.hpp  BoxManager.hpp  Component.hpp  Game.hpp  Vec2.hpp
src/: Box.cpp  BoxManager.cpp  Game.cpp  Vec2.cpp
